@@ -4,6 +4,11 @@ CHANGELOG
 ** For a while this is going to include only breaking changes.
 ** As we slowly transition toward releasing the test engine, this will become a more full fledged changelog.
 
+2022/05/10
+- TestEngine: Installation of a crash handler is now explicit and optional. Do one of the following:
+    - Call ImGuiTestEngine_InstallCrashHandler() to install default crash handler.
+    - Call ImGuiTestEngine_CrashHandler() from your own custom crash handler if such exists.
+
 2022/04/08
 - TestEngine: fix ItemAction() or ItemInfo() with leading **/ wildcard from not reporting any error on failure.
 
